--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,14 +2,15 @@ spring:
   application.name: scheduler
   datasource:
     name: dataSource
-    username: app
-    password: app
-    driverClassName: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/efn?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+    username: sa
+    password: password
+    driverClassName: org.h2.Driver
+    url: jdbc:h2:mem:testdb
   jpa:
     hibernate.ddl-auto: validate
     generate-ddl: true
     show-sql: true
+    database-platform: org.hibernate.dialect.H2Dialect
 flyway:
   url: ${spring.datasource.url}
   user: ${spring.datasource.username}
